[tool.poetry]
name = "ponzu"
version = "0.0.1"
description = ""
authors = ["Dustin <30984443+DustinJamesT@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.0.2"
asyncio = "^3.4.3"
aiohttp = "^3.8.4"
retry = "^0.9.2"
beautifulsoup4 = "^4.12.2"
regex = "^2023.6.3"
langchain = "^0.0.202"
mdutils = "^1.6.0"
pydantic = "^1.10.9"
youtube-transcript-api = "^0.6.1"
openai = "^0.27.8"
chromadb = "^0.3.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
